fixed phone menu overflow

--- a/src/scss/navbar/_navbar.scss
+++ b/src/scss/navbar/_navbar.scss
@@ -6,6 +6,7 @@ nav {
   padding: 1rem 0;
   z-index: 2;
   position: relative;
+  overflow: hidden;
 
   .brand {
     a {
@@ -87,9 +88,9 @@ nav {
   }
 
   .phone-menu {
-    position: absolute;
+    position: fixed;
     top: 0;
-    left: 0;
+    
     width: 100%;
     height: 100vh;
     background: $lighter-green;
